RESOLVED FIXED82187
[Qt] Assert in GestureTapHighlighter
https://bugs.webkit.org/show_bug.cgi?id=82187
Summary [Qt] Assert in GestureTapHighlighter
Allan Sandfeld Jensen
Reported 2012-03-26 04:03:10 PDT
When clicking on a link you will occationally trigger the two ASSERTs addHighlightRect. ASSERT(!rect.intersects(prev)); ASSERT(!rect.intersects(next)); It appears to be possible because the center-block is adjusted to the boundaries of first and last rect, after it has been tested if it intersects with first or last.
Attachments
Patch (2.94 KB, patch)
2012-03-26 04:06 PDT, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2012-03-26 04:06:39 PDT
Kenneth Rohde Christiansen
Comment 2 2012-03-26 04:11:13 PDT
Comment on attachment 133770 [details] Patch Seems correct :-)
WebKit Review Bot
Comment 3 2012-03-26 04:57:09 PDT
Comment on attachment 133770 [details] Patch Clearing flags on attachment: 133770 Committed r112077: <http://trac.webkit.org/changeset/112077>
WebKit Review Bot
Comment 4 2012-03-26 04:57:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.