[Qt] Assert in GestureTapHighlighter. https://bugs.webkit.org/show_bug.cgi?id=82187

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-03-26
Reviewed by Kenneth Rohde Christiansen.

Adjust the boundaries of the center-rect before performing the intersection test,
since adjusting the boundary may cause a new intersection.

* page/GestureTapHighlighter.cpp:

Canonical link: https://commits.webkit.org/99521@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112077 268f45cc-cd09-0410-ab3c-d52691b4dbfc