Source/WebCore/page/GestureTapHighlighter.cpp
@@ -95,6 +95,8 @@ inline bool strikes(const LayoutRect& a, const LayoutRect& b)
 
 inline void shiftXEdgesToContainIfStrikes(LayoutRect& rect, const LayoutRect& other)
 {
+    if (rect.isEmpty())
+        return;
     LayoutUnit leftSide = rect.x();
     LayoutUnit rightSide = rect.maxX();
 
@@ -156,6 +158,9 @@ Path pathForRenderer(RenderObject* o)
 
     // Add the first box, but merge it with the center boxes if it intersects.
     if (rects.size() && !rects.first().isEmpty()) {
+        // Adjust center boxes to boundary of first
+        if (drawableRects.size())
+            shiftXEdgesToContainIfStrikes(drawableRects.last(), rects.first());
         if (drawableRects.size() && drawableRects.last().intersects(rects.first()))
             drawableRects.last().unite(rects.first());
         else
@@ -164,17 +169,13 @@ Path pathForRenderer(RenderObject* o)
 
     // Add the last box, but merge it with the center boxes if it intersects.
     if (rects.size() > 1 && !rects.last().isEmpty()) {
+        // Adjust center boxes to boundary of last
+        if (drawableRects.size())
+            shiftXEdgesToContainIfStrikes(drawableRects.last(), rects.last());
         if (drawableRects.size() && drawableRects.last().intersects(rects.last()))
             drawableRects.last().unite(rects.last());
         else
             drawableRects.append(rects.last());
-    }
-
-    // Adjust middle to boundaries of first and last.
-    if (drawableRects.size() == 3) {
-        LayoutRect& middle = drawableRects.at(1);
-        shiftXEdgesToContainIfStrikes(middle, drawableRects.at(0));
-        shiftXEdgesToContainIfStrikes(middle, drawableRects.at(2));
     }
 
     for (size_t i = 0; i < drawableRects.size(); ++i) {
